# Crew-AI

./: .env  .env.example  .gitignore  README.md  pyproject.toml  shell.nix
api/: bca_api.py
crews/bca_gpt/: bca_crew.py  bca_gpt.py
crews/project-planner/: agent.py  crew.py  task.py
crews/project-planner/config/: agents.yaml
crews/project_planner/: agent.py  crew.py  helper.py  task.py
db/: client.py
src/agents/project-planner/: crew.py
src/agents/project-planner/config/: tasks.yaml
test/: main.py
